# wachat

./: .aiexclude  .env.example  .gitignore  .sabcrm-batches-w10.json  .sabcrm-batches-w2.json  .sabcrm-batches-w3.json  .sabcrm-batches-w4.json  .sabcrm-batches-w5.json  .sabcrm-batches-w6.json  .sabcrm-batches-w7.json  .sabcrm-batches-w8.json  .sabcrm-batches-w9.json  .sabcrm-batches.json  .sabcrm-complete-workflow.js  .sabcrm-emailfix.txt  .sabcrm-fix-workflow.js  .sabcrm-leak-check.txt  .sabcrm-manifest-gen.cjs  .sabcrm-native-p1-workflow.js  .sabcrm-native-p2p3-workflow.js  .sabcrm-p4p7-workflow.js  .sabcrm-pending.json  .sabcrm-rebrand-finish-workflow.js  .sabcrm-repoint-batches.json  .sabcrm-reskin-workflow.js  .sabcrm-verify-report.txt  .studioignore  .tmp-smoke.mjs  .tmp_sabshop_rename.py  .tmp_sabshop_rename2.py  BROADCAST_WORKER_CUTOVER.md  CLAUDE.md  FULL-SERVER-SETUP.md  MASTERPLAN_CHUNK_17.md  MASTERPLAN_CHUNK_25.md  META_SUITE_ZORUUI_TASKS.md  N8N_MIGRATION_PLAN.md  Oops.rej  PLAN-sabflow-coverage.md  PLAN_REAL_PAGES.md  (+383 more)
benches/sabflow-executor/rust/: Cargo.toml
benches/sabflow-ws/rust/: Cargo.toml
rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  fix_utoipa.py  run_test.sh  test_fred.rs
rust/crates/: AGENT_RULES.md  generate_crates.sh  my_scaffold_script.py  scaffold.py  scaffold_sabsense.py  scaffold_sabvault.py
rust/crates/ad-manager/: Cargo.toml
rust/crates/admin/: Cargo.toml
rust/crates/api/: Cargo.toml  README.md
rust/crates/auth/: Cargo.toml
rust/crates/common/: Cargo.toml
rust/crates/crm-account-groups/: Cargo.toml
rust/crates/crm-accounting-types/: Cargo.toml
rust/crates/crm-accounts/: Cargo.toml
rust/crates/crm-agent-groups/: Cargo.toml
rust/crates/crm-announcements/: Cargo.toml
rust/crates/crm-appraisals/: Cargo.toml
rust/crates/crm-asset-assignments/: Cargo.toml
rust/crates/crm-assets/: Cargo.toml
rust/crates/crm-attendance/: Cargo.toml  scratch.rs
rust/crates/crm-auto-leads/: Cargo.toml
rust/crates/crm-automations/: Cargo.toml
rust/crates/crm-awards/: Cargo.toml
rust/crates/crm-bank-transactions/: Cargo.toml
rust/crates/crm-banking-types/: Cargo.toml
rust/crates/crm-bills/: Cargo.toml
rust/crates/crm-bom/: Cargo.toml
rust/crates/crm-bookings/: Cargo.toml
rust/crates/crm-branches/: Cargo.toml
rust/crates/crm-brands/: Cargo.toml
rust/crates/crm-budgets/: Cargo.toml
rust/crates/crm-candidates/: Cargo.toml
rust/crates/crm-certifications/: Cargo.toml
rust/crates/crm-chart-of-accounts/: Cargo.toml
rust/crates/crm-common/: Cargo.toml
rust/crates/crm-company-profile/: Cargo.toml
rust/crates/crm-compensation-bands/: Cargo.toml
rust/crates/crm-contacts/: Cargo.toml
rust/crates/crm-contracts/: Cargo.toml
rust/crates/crm-conversions/: Cargo.toml
rust/crates/crm-core/: Cargo.toml
rust/crates/crm-coupons/: Cargo.toml
rust/crates/crm-credit-notes/: Cargo.toml
rust/crates/crm-currencies/: Cargo.toml
rust/crates/crm-custom-fields/: Cargo.toml
rust/crates/crm-dashboards/: Cargo.toml
rust/crates/crm-deals/: Cargo.toml
rust/crates/crm-debit-notes/: Cargo.toml
rust/crates/crm-delivery-challans/: Cargo.toml
rust/crates/crm-departments/: Cargo.toml
rust/crates/crm-disciplinary/: Cargo.toml
rust/crates/crm-document-templates/: Cargo.toml
rust/crates/crm-documents/: Cargo.toml
rust/crates/crm-email-templates/: Cargo.toml
rust/crates/crm-employees/: Cargo.toml
rust/crates/crm-estimate-requests/: Cargo.toml
rust/crates/crm-events/: Cargo.toml
rust/crates/crm-exits/: Cargo.toml
rust/crates/crm-expense-categories/: Cargo.toml
rust/crates/crm-expense-claims/: Cargo.toml
rust/crates/crm-extras-types/: Cargo.toml
rust/crates/crm-feedback-360/: Cargo.toml
rust/crates/crm-fixed-assets/: Cargo.toml
rust/crates/crm-form-16/: Cargo.toml
rust/crates/crm-form-submissions/: Cargo.toml
rust/crates/crm-forms/: Cargo.toml
rust/crates/crm-gift-cards/: Cargo.toml
rust/crates/crm-goals/: Cargo.toml
rust/crates/crm-grns/: Cargo.toml
rust/crates/crm-hire/: Cargo.toml
rust/crates/crm-holidays/: Cargo.toml
rust/crates/crm-industries/: Cargo.toml
rust/crates/crm-integrations-types/: Cargo.toml
rust/crates/crm-interviews/: Cargo.toml
rust/crates/crm-inventory-types/: Cargo.toml
rust/crates/crm-invoices/: Cargo.toml
rust/crates/crm-issues/: Cargo.toml
rust/crates/crm-items/: Cargo.toml
rust/crates/crm-jobs/: Cargo.toml
rust/crates/crm-kb-articles/: Cargo.toml
rust/crates/crm-kb-categories/: Cargo.toml
rust/crates/crm-kpis/: Cargo.toml
rust/crates/crm-labels/: Cargo.toml
rust/crates/crm-leads/: Cargo.toml
rust/crates/crm-learning-paths/: Cargo.toml
rust/crates/crm-leave-requests/: Cargo.toml
rust/crates/crm-leaves/: Cargo.toml
rust/crates/crm-loans/: Cargo.toml
rust/crates/crm-lookup/: Cargo.toml
rust/crates/crm-lookup-types/: Cargo.toml
rust/crates/crm-loyalty-programs/: Cargo.toml
rust/crates/crm-milestones/: Cargo.toml
rust/crates/crm-notices/: Cargo.toml
rust/crates/crm-offers/: Cargo.toml
rust/crates/crm-okrs/: Cargo.toml
rust/crates/crm-onboarding/: Cargo.toml
rust/crates/crm-one-on-ones/: Cargo.toml
rust/crates/crm-payment-accounts/: Cargo.toml
rust/crates/crm-payment-receipts/: Cargo.toml
rust/crates/crm-payouts/: Cargo.toml
rust/crates/crm-payroll-runs/: Cargo.toml
rust/crates/crm-payroll-settings/: Cargo.toml
rust/crates/crm-payslips/: Cargo.toml
rust/crates/crm-petty-cash/: Cargo.toml
rust/crates/crm-pf-esi/: Cargo.toml
rust/crates/crm-pipelines/: Cargo.toml
rust/crates/crm-policies/: Cargo.toml
rust/crates/crm-portal-users/: Cargo.toml
rust/crates/crm-pos/: Cargo.toml
rust/crates/crm-probation/: Cargo.toml
rust/crates/crm-product-categories/: Cargo.toml
rust/crates/crm-production-orders/: Cargo.toml
rust/crates/db/: Cargo.toml
rust/docs/: DEPLOYMENT.md
services/sabcall-engine/: Cargo.toml
services/sabmail-engine/: Cargo.toml
services/sabsms-engine/: Cargo.toml  README.md
services/sabwa-engine/: .dockerignore  Cargo.toml  Dockerfile  README.md  SETUP.md
(+32159 files in other folders)
