[workspace]
resolver = "3"
members = [
    "crates/api",
    "crates/auth",
    "crates/common",
    "crates/db",
    "crates/observability",
    "crates/users",
    "crates/wachat-media",
    "crates/wachat-meta-auth",
    "crates/wachat-meta-client",
    "crates/wachat-meta-dto",
    "crates/wachat-phone",
    "crates/wachat-queue",
    "crates/meta-suite",
    "crates/wachat-analytics",
    "crates/wachat-chat-mark",
    "crates/wachat-config",
    "crates/meta-token",
    "crates/qr-codes",
    "crates/url-shortener",
    "crates/ad-manager",
    "crates/facebook-flow",
    "crates/wachat-chat-read",
    "crates/wachat-contacts-resolve",
    "crates/wachat-broadcast",
    "crates/wachat-broadcast-worker",
    "crates/wachat-calling",
    "crates/wachat-features",
    "crates/wachat-pay",
    "crates/wachat-payment-request",
    "crates/wachat-rate-limit",
    "crates/wachat-send",
    "crates/wachat-send-cta",
    "crates/wachat-send-flows",
    "crates/wachat-send-orders",
    "crates/wachat-send-router",
    "crates/wachat-templates",
    "crates/wachat-templates-actions",
    "crates/wachat-templates-categories",
    "crates/wachat-templates-engine",
    "crates/wachat-templates-mutate",
    "crates/wachat-templates-router",
    "crates/wachat-templates-send",
    "crates/wachat-templates-sync",
    "crates/wachat-templates-tests",
    "crates/wachat-types",
    "crates/wachat-webhook",
    "crates/wachat-webhook-account",
    "crates/wachat-webhook-actions",
    "crates/wachat-webhook-config",
    "crates/wachat-webhook-contacts",
    "crates/wachat-webhook-conversations",
    "crates/wachat-webhook-dlq",
    "crates/wachat-webhook-inbound",
    "crates/wachat-webhook-parity",
    "crates/wachat-webhook-status",
    "crates/wachat-webhook-template-events",
    "crates/wachat-webhook-verify",
    "crates/wachat-public-api",
    "crates/wachat-projects",
    "crates/wachat-contacts",
    "crates/wachat-flows",
    "crates/wachat-api-keys-admin",
    "crates/wachat-facebook-pages",
    "crates/wachat-facebook-messenger-profile",
    "crates/wachat-facebook-content",
    "crates/wachat-facebook-messaging",
    "crates/wachat-facebook-automation",
    "crates/wachat-facebook-crm",
    "crates/wachat-facebook-agents",
    "crates/wachat-facebook-business",
    "crates/wachat-facebook-misc",
    "crates/wachat-facebook-comments",
    "crates/wachat-facebook-events",
    "crates/wachat-facebook-lead-gen",
    "crates/wachat-instagram",
    "crates/sabfiles",
    "crates/wachat-ads-pixels",
    "crates/telegram-bots",
    "crates/telegram-chats",
    "crates/telegram-broadcasts",
    "crates/telegram-auto-reply",
    "crates/telegram-commands",
    "crates/telegram-bot-profile",
    "crates/telegram-channels",
    "crates/telegram-analytics",
    "crates/telegram-payments",
    "crates/telegram-stickers",
    "crates/telegram-stories",
    "crates/telegram-flows",
    "crates/telegram-mini-apps",
    "crates/telegram-ads",
    "crates/crm-core",
    "crates/crm-sales-types",
    "crates/crm-purchases-types",
    "crates/crm-inventory-types",
    "crates/crm-accounting-types",
    "crates/crm-sales-crm-types",
    "crates/crm-banking-types",
    "crates/crm-reports-types",
    "crates/crm-integrations-types",
    "crates/hrm-payroll-types",
    "crates/hrm-people-types",
    "crates/crm-extras-types",
    "crates/crm-lookup-types",
    "crates/crm-lookup",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# CI runs `cargo clippy -- -D warnings`. These style lints are noisy across a
# 26-crate workspace authored by many parallel agents — allow them rather than
# fighting drift on each merge. Real correctness lints (unused, dead_code,
# etc.) still escalate to errors.
[workspace.lints.clippy]
collapsible_if = "allow"
doc_overindented_list_items = "allow"
type_complexity = "allow"
useless_conversion = "allow"
result_large_err = "allow"
manual_div_ceil = "allow"
needless_question_mark = "allow"
single_match = "allow"
redundant_closure = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
unnecessary_lazy_evaluations = "allow"
collapsible_match = "allow"
needless_lifetimes = "allow"
needless_return = "allow"
bool_assert_comparison = "allow"
