[workspace]
resolver = "3"
members = [
    "crates/api",
    "crates/auth",
    "crates/common",
    "crates/db",
    "crates/observability",
    "crates/users",
    "crates/admin",
    "crates/wachat-media",
    "crates/wachat-meta-auth",
    "crates/wachat-meta-client",
    "crates/wachat-meta-dto",
    "crates/wachat-phone",
    "crates/wachat-queue",
    "crates/meta-suite",
    "crates/wachat-analytics",
    "crates/wachat-chat-mark",
    "crates/wachat-config",
    "crates/meta-token",
    "crates/qr-codes",
    "crates/url-shortener",
    "crates/ad-manager",
    "crates/facebook-flow",
    "crates/wachat-chat-read",
    "crates/wachat-contacts-resolve",
    "crates/wachat-broadcast",
    "crates/wachat-broadcast-worker",
    "crates/wachat-calling",
    "crates/wachat-features",
    "crates/wachat-pay",
    "crates/wachat-payment-request",
    "crates/wachat-rate-limit",
    "crates/wachat-send",
    "crates/wachat-send-cta",
    "crates/wachat-send-flows",
    "crates/wachat-send-orders",
    "crates/wachat-send-router",
    "crates/wachat-templates",
    "crates/wachat-templates-actions",
    "crates/wachat-templates-categories",
    "crates/wachat-templates-engine",
    "crates/wachat-templates-mutate",
    "crates/wachat-templates-router",
    "crates/wachat-templates-send",
    "crates/wachat-templates-sync",
    "crates/wachat-templates-tests",
    "crates/wachat-types",
    "crates/wachat-webhook",
    "crates/wachat-webhook-account",
    "crates/wachat-webhook-actions",
    "crates/wachat-webhook-config",
    "crates/wachat-webhook-contacts",
    "crates/wachat-webhook-conversations",
    "crates/wachat-webhook-dlq",
    "crates/wachat-webhook-inbound",
    "crates/wachat-webhook-parity",
    "crates/wachat-webhook-status",
    "crates/wachat-webhook-template-events",
    "crates/wachat-webhook-verify",
    "crates/wachat-public-api",
    "crates/wachat-projects",
    "crates/wachat-contacts",
    "crates/wachat-flows",
    "crates/wachat-api-keys-admin",
    "crates/wachat-facebook-pages",
    "crates/wachat-facebook-messenger-profile",
    "crates/wachat-facebook-content",
    "crates/wachat-facebook-messaging",
    "crates/wachat-facebook-automation",
    "crates/wachat-facebook-crm",
    "crates/wachat-facebook-agents",
    "crates/wachat-facebook-business",
    "crates/wachat-facebook-misc",
    "crates/wachat-facebook-comments",
    "crates/wachat-facebook-events",
    "crates/wachat-facebook-lead-gen",
    "crates/wachat-instagram",
    "crates/sabfiles",
    "crates/wachat-ads-pixels",
    "crates/telegram-bots",
    "crates/telegram-chats",
    "crates/telegram-broadcasts",
    "crates/telegram-auto-reply",
    "crates/telegram-commands",
    "crates/telegram-bot-profile",
    "crates/telegram-channels",
    "crates/telegram-analytics",
    "crates/telegram-payments",
    "crates/telegram-stickers",
    "crates/telegram-stories",
    "crates/telegram-flows",
    "crates/telegram-mini-apps",
    "crates/telegram-ads",
    "crates/telegram-api-credentials",
    "crates/telegram-business-inbox",
    "crates/telegram-contacts",
    "crates/telegram-settings",
    "crates/telegram-webhooks",
    "crates/crm-core",
    "crates/crm-sales-types",
    "crates/crm-purchases-types",
    "crates/crm-inventory-types",
    "crates/crm-accounting-types",
    "crates/crm-sales-crm-types",
    "crates/crm-banking-types",
    "crates/crm-reports-types",
    "crates/crm-integrations-types",
    "crates/hrm-payroll-types",
    "crates/hrm-people-types",
    "crates/crm-extras-types",
    "crates/crm-lookup-types",
    "crates/crm-lookup",
    "crates/crm-conversions",
    "crates/crm-deals",
    "crates/crm-leads",
    "crates/crm-quotations",
    "crates/crm-invoices",
    "crates/crm-sales-orders",
    "crates/crm-purchase-orders",
    "crates/crm-payment-receipts",
    "crates/crm-credit-notes",
    "crates/crm-debit-notes",
    "crates/crm-payouts",
    "crates/crm-tickets",
    "crates/crm-subscriptions",
    "crates/crm-bills",
    "crates/crm-rfqs",
    "crates/crm-vendor-bids",
    "crates/crm-grns",
    "crates/crm-employees",
    "crates/crm-attendance",
    "crates/crm-leaves",
    "crates/crm-payroll-runs",
    "crates/crm-fixed-assets",
    "crates/crm-bookings",
    "crates/crm-holidays",
    "crates/crm-departments",
    "crates/sabflow-engine",
    "crates/sabflow-webhooks",
    "crates/sabflow-nodes",
    "crates/sabflow-node-derive",
    "crates/sabflow-engine-runtime",
    "crates/sabflow-executor/core",
    "crates/sabflow-executor/nodes",
    "crates/sabflow-executor/queue",
    "crates/sabflow-executor/expression",
    "crates/sabflow-executor/errors",
    "crates/sabsms-types",
    "crates/sabsms-db",
    "crates/sabsms-providers",
    "crates/sabsms-send-router",
    "crates/sabsms-queue",
    "crates/sabsms-webhooks-inbound",
    "crates/sabsms-webhooks-dlr",
    "crates/sabsms-templates-engine",
    "crates/sabsms-campaigns",
    "crates/sabsms-compliance",
    "crates/sabsms-api",
    "crates/rbac",
    "crates/crm-common",
    "crates/crm-accounts",
    "crates/crm-contacts",
    "crates/crm-items",
    "crates/crm-vendors",
    "crates/crm-pipelines",
    "crates/crm-brands",
    "crates/crm-tags",
    "crates/crm-labels",
    "crates/crm-branches",
    "crates/crm-warehouses",
    "crates/crm-stock-adjustments",
    "crates/crm-coupons",
    "crates/crm-gift-cards",
    "crates/crm-loyalty-programs",
    "crates/crm-budgets",
    "crates/crm-loans",
    "crates/crm-petty-cash",
    "crates/crm-bom",
    "crates/crm-production-orders",
    "crates/crm-proforma-invoices",
    "crates/crm-delivery-challans",
    "crates/crm-service-contracts",
    "crates/crm-tasks",
    "crates/crm-disciplinary",
    "crates/crm-vouchers",
    "crates/crm-contracts",
    "crates/crm-awards",
    "crates/crm-kb-articles",
    "crates/crm-payment-accounts",
    "crates/crm-slas",
    "crates/crm-exits",
    "crates/crm-purchase-leads",
    "crates/crm-automations",
    "crates/crm-forms",
    "crates/crm-saved-views",
    "crates/crm-email-templates",
    "crates/crm-portal-users",
    "crates/crm-appraisals",
    "crates/crm-succession",
    "crates/crm-reconciliation",
    "crates/crm-payroll-settings",
    "crates/crm-auto-leads",
    "crates/crm-project-tasks",
    "crates/crm-payslips",
    "crates/crm-salary-structures",
    "crates/crm-products",
    "crates/crm-goals",
    "crates/crm-pt-slabs",
    "crates/crm-chart-of-accounts",
    "crates/crm-account-groups",
    "crates/crm-dashboards",
    "crates/crm-voucher-entries",
    "crates/crm-form-submissions",
    "crates/crm-kpis",
    "crates/crm-industries",
    "crates/crm-product-categories",
    "crates/crm-settings",
    "crates/crm-taxes",
    "crates/crm-units",
    "crates/crm-vendor-types",
    "crates/crm-purchases",
    "crates/crm-leave-requests",
    "crates/crm-subtasks",
    "crates/crm-milestones",
    "crates/crm-issues",
    "crates/crm-time-logs",
    "crates/crm-ticket-tags",
    "crates/crm-ticket-channels",
    "crates/crm-reply-templates",
    "crates/crm-candidates",
    "crates/crm-jobs",
    "crates/crm-interviews",
    "crates/crm-offers",
    "crates/crm-onboarding",
    "crates/crm-assets",
    "crates/crm-documents",
    "crates/crm-training",
    "crates/crm-ticket-groups",
    "crates/crm-ticket-types",
    "crates/crm-agent-groups",
    "crates/crm-shifts",
    "crates/crm-okrs",
    "crates/crm-policies",
    "crates/crm-announcements",
    "crates/crm-events",
    "crates/crm-notices",
    "crates/crm-currencies",
    "crates/crm-expense-categories",
    "crates/crm-custom-fields",
    "crates/crm-company-profile",
    "crates/crm-shift-rotations",
    "crates/crm-one-on-ones",
    "crates/crm-project-categories",
    "crates/crm-task-labels",
    "crates/crm-taskboard-columns",
    "crates/crm-recurring-invoices",
    "crates/crm-proposals",
    "crates/crm-estimate-requests",
    "crates/crm-bank-transactions",
    "crates/crm-tds",
    "crates/crm-pf-esi",
    "crates/crm-professional-tax",
    "crates/crm-hire",
    "crates/crm-roles",
    "crates/crm-certifications",
    "crates/crm-learning-paths",
    "crates/crm-travel",
    "crates/crm-expense-claims",
    "crates/crm-compensation-bands",
    "crates/crm-probation",
    "crates/crm-recognitions",
    "crates/crm-surveys",
    "crates/crm-feedback-360",
    "crates/crm-form-16",
    "crates/crm-shift-change-requests",
    "crates/crm-asset-assignments",
    "crates/crm-document-templates",
    "crates/crm-task-categories",
    "crates/crm-task-tags",
    "crates/email-types",
    "crates/email-audience",
    "crates/email-campaigns",
    "crates/email-sender",
    "crates/email-templates",
    "crates/email-inbox",
    "crates/email-inbound",
    "crates/email-deliverability",
    "crates/email-api",
    "crates/email-webhooks",
    "crates/email-events",
    "crates/email-reports",
    "crates/email-journeys",
    "crates/email-journey-worker",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# CI runs `cargo clippy -- -D warnings`. These style lints are noisy across a
# 26-crate workspace authored by many parallel agents — allow them rather than
# fighting drift on each merge. Real correctness lints (unused, dead_code,
# etc.) still escalate to errors.
[workspace.lints.clippy]
collapsible_if = "allow"
doc_overindented_list_items = "allow"
type_complexity = "allow"
useless_conversion = "allow"
result_large_err = "allow"
manual_div_ceil = "allow"
needless_question_mark = "allow"
single_match = "allow"
redundant_closure = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
unnecessary_lazy_evaluations = "allow"
collapsible_match = "allow"
needless_lifetimes = "allow"
needless_return = "allow"
bool_assert_comparison = "allow"
