[package]
name = "sabwa-engine"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
description = "SabWa WhatsApp engine — Rust service powering pairing, real-time delivery, scheduling, webhooks and anti-ban for SabNode."
publish = false

[[bin]]
name = "sabwa-engine"
path = "src/main.rs"

[lib]
name = "sabwa_engine"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"
async-trait = "0.1"
dotenvy = "0.15"
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1"
