# Standalone bench crate — NOT a member of rust/Cargo.toml workspace.
#
# Rationale: adding this to the workspace would force every workspace build to
# resolve bench-only deps (axum, tokio rt-multi-thread). Per the ADR and per
# the parent plan, we keep the bench harness isolated until/unless it earns a
# place in the main graph.
#
# Build:
#   cd benches/sabflow-executor/rust && cargo build --release
# Run:
#   ./target/release/sabflow-bench-rust --port 7070

[package]
name = "sabflow-bench-rust"
version = "0.1.0"
edition = "2021"
publish = false
description = "SabFlow executor hot-path Rust candidate for Track B Phase 1 bench."
license = "Apache-2.0"

[[bin]]
name = "sabflow-bench-rust"
path = "src/main.rs"

# Workspace isolation: this crate must not be picked up by the parent rust/
# workspace resolver. The empty [workspace] table makes it its own root.
[workspace]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"
