[package]
name = "sabnode-api"
version = "0.1.0"
edition = "2024"
description = "SabNode HTTP API binary (Phase 0)."
license = "UNLICENSED"
publish = false

[[bin]]
name = "sabnode-api"
path = "src/main.rs"

[dependencies]
common = { package = "sabnode-common", path = "../common" }
sabnode-auth = { path = "../auth" }
sabnode-db = { path = "../db" }
sabnode-users = { path = "../users" }
sabnode-observability = { path = "../observability" }

wachat-webhook = { path = "../wachat-webhook" }
wachat-webhook-actions = { path = "../wachat-webhook-actions" }
wachat-webhook-config = { path = "../wachat-webhook-config" }
wachat-webhook-verify = { path = "../wachat-webhook-verify" }
wachat-webhook-status = { path = "../wachat-webhook-status" }
wachat-webhook-inbound = { path = "../wachat-webhook-inbound" }
wachat-webhook-account = { path = "../wachat-webhook-account" }
wachat-webhook-template-events = { path = "../wachat-webhook-template-events" }
wachat-webhook-dlq = { path = "../wachat-webhook-dlq" }
wachat-webhook-contacts = { path = "../wachat-webhook-contacts" }
wachat-webhook-conversations = { path = "../wachat-webhook-conversations" }
wachat-queue = { path = "../wachat-queue" }

wachat-templates = { path = "../wachat-templates" }
wachat-templates-mutate = { path = "../wachat-templates-mutate" }
wachat-templates-sync = { path = "../wachat-templates-sync" }
wachat-templates-categories = { path = "../wachat-templates-categories" }
wachat-templates-send = { path = "../wachat-templates-send" }
wachat-templates-router = { path = "../wachat-templates-router" }
wachat-templates-actions = { path = "../wachat-templates-actions" }
wachat-meta-client = { path = "../wachat-meta-client" }
wachat-media = { path = "../wachat-media" }

wachat-send = { path = "../wachat-send" }
wachat-send-cta = { path = "../wachat-send-cta" }
wachat-send-flows = { path = "../wachat-send-flows" }
wachat-send-orders = { path = "../wachat-send-orders" }
wachat-contacts-resolve = { path = "../wachat-contacts-resolve" }
wachat-chat-read = { path = "../wachat-chat-read" }
wachat-chat-mark = { path = "../wachat-chat-mark" }
wachat-payment-request = { path = "../wachat-payment-request" }
wachat-pay = { path = "../wachat-pay" }
wachat-broadcast = { path = "../wachat-broadcast" }
wachat-calling = { path = "../wachat-calling" }
wachat-features = { path = "../wachat-features" }
wachat-send-router = { path = "../wachat-send-router" }
wachat-public-api = { path = "../wachat-public-api" }
wachat-projects = { path = "../wachat-projects" }
wachat-contacts = { path = "../wachat-contacts" }
crm-lookup = { path = "../crm-lookup" }
crm-leads = { path = "../crm-leads" }
crm-deals = { path = "../crm-deals" }
crm-quotations = { path = "../crm-quotations" }
crm-invoices = { path = "../crm-invoices" }
crm-sales-orders = { path = "../crm-sales-orders" }
crm-purchase-orders = { path = "../crm-purchase-orders" }
crm-payment-receipts = { path = "../crm-payment-receipts" }
crm-credit-notes = { path = "../crm-credit-notes" }
crm-debit-notes = { path = "../crm-debit-notes" }
crm-payouts = { path = "../crm-payouts" }
crm-tickets = { path = "../crm-tickets" }
crm-subscriptions = { path = "../crm-subscriptions" }
crm-bills = { path = "../crm-bills" }
crm-rfqs = { path = "../crm-rfqs" }
crm-vendor-bids = { path = "../crm-vendor-bids" }
crm-grns = { path = "../crm-grns" }
crm-employees = { path = "../crm-employees" }
crm-attendance = { path = "../crm-attendance" }
crm-leaves = { path = "../crm-leaves" }
crm-payroll-runs = { path = "../crm-payroll-runs" }
crm-fixed-assets = { path = "../crm-fixed-assets" }
crm-bookings = { path = "../crm-bookings" }
crm-holidays = { path = "../crm-holidays" }
crm-departments = { path = "../crm-departments" }
wachat-flows = { path = "../wachat-flows" }
wachat-api-keys-admin = { path = "../wachat-api-keys-admin" }
wachat-facebook-pages = { path = "../wachat-facebook-pages" }
wachat-facebook-content = { path = "../wachat-facebook-content" }
wachat-facebook-messaging = { path = "../wachat-facebook-messaging" }
wachat-facebook-automation = { path = "../wachat-facebook-automation" }
wachat-facebook-crm = { path = "../wachat-facebook-crm" }
wachat-facebook-agents = { path = "../wachat-facebook-agents" }
wachat-facebook-business = { path = "../wachat-facebook-business" }
wachat-facebook-misc = { path = "../wachat-facebook-misc" }
wachat-facebook-comments = { path = "../wachat-facebook-comments" }
wachat-facebook-events = { path = "../wachat-facebook-events" }
wachat-facebook-lead-gen = { path = "../wachat-facebook-lead-gen" }
wachat-facebook-messenger-profile = { path = "../wachat-facebook-messenger-profile" }
wachat-instagram = { path = "../wachat-instagram" }
sabfiles = { path = "../sabfiles" }
telegram-bots = { path = "../telegram-bots" }
telegram-chats = { path = "../telegram-chats" }
telegram-broadcasts = { path = "../telegram-broadcasts" }
telegram-auto-reply = { path = "../telegram-auto-reply" }
telegram-commands = { path = "../telegram-commands" }
telegram-bot-profile = { path = "../telegram-bot-profile" }
telegram-channels = { path = "../telegram-channels" }
telegram-analytics = { path = "../telegram-analytics" }
telegram-payments = { path = "../telegram-payments" }
telegram-stickers = { path = "../telegram-stickers" }
telegram-stories = { path = "../telegram-stories" }
telegram-flows = { path = "../telegram-flows" }
telegram-mini-apps = { path = "../telegram-mini-apps" }
telegram-ads = { path = "../telegram-ads" }
wachat-rate-limit = { path = "../wachat-rate-limit" }
wachat-config = { path = "../wachat-config" }
wachat-analytics = { path = "../wachat-analytics" }
meta-suite = { path = "../meta-suite" }
meta-token = { path = "../meta-token" }
meta-flows = { path = "../meta-flows" }
qr-codes = { path = "../qr-codes" }
url-shortener = { path = "../url-shortener" }
ad-manager = { path = "../ad-manager" }
facebook-flow = { path = "../facebook-flow" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util", "timeout"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1.0"

[lints]
workspace = true
